#pragma once
class Element {
 public:
  virtual int eval() const = 0;
};
