@startuml
object 输入字符串
diamond lex

class Token{
    + Type
}
class Element{
    + {abstract} int eval()
}
class Integer{
    + int eval() override
}
class BinaryOperation{
    + type
    + int eval() override
}
输入字符串-->lex:获取tokens
lex-->Token:存储token
Token::Type-->Integer:解析为整数
Token::Type-->BinaryOperation:解析为操作数
Element<|--Integer
Element<|--BinaryOperation
@enduml